# jp-deinflector

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: deinflect.rs  deinflection_rules.rs  kata_to_hira.rs  lib.rs  main.rs
