[package]
name = "jp-deinflector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for deinflecting Japanese words"
repository = "https://github.com/btrkeks/jp-deinflector"

[dependencies]
phf = { version = "0.11.3", features = ["macros"] }
ccl-fxhash = "3.0.0"

# To make -Zminimal-versions happy
serde = ">=1.0.100" # via phf

[dev-dependencies]
proptest = "1.6.0"
jp_inflections = "0.1.3"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
