[package]
name = "jp-deinflector"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for deinflecting Japanese words"
repository = "https://github.com/btrkeks/jp-deinflector"

[dependencies]
ccl-fxhash = "3.0.0"
hashify = "0.2.6"

[dev-dependencies]
proptest = "1.6.0"
# jp_inflections = "0.1.3" # unfortunately provides wrong inflections
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
